
[1.1.2]

  * FIX: Fixed ugly bug that made 1.1.1 practically unusable (thanks Stubbs)

[1.1.3]

  * FEATURE: Added rawResponse to Token, for extracting additional parameters (thanks Dirk McCormick)
  * FEATURE: Added Dropbox Api
  * FIX: Token responses now work despite of the token/secret order
  * FEATURE: Added Foursquare OAuth 2.0 Api (thanks Tom Tasche)
  * FEATURE: Added support for OAuth1.0a signatures via querystring parameters
  * FEATURE: Added ConstantContact Api (thanks Matthew Laudato)

[1.2]
  * REFACTOR: Moved scope inside OAuthConfig (breaks backwards compatibility)
  * FEATURE: Added scopes to Facebook 2.0 Api
  * FEATURE: Added Plaintext signature for Yammer
  * FEATURE: Added Twitter SSL endpoints (use TwitterApi.SSL.class)

[1.2.1]
  * FEATURE: Added custom charset support to Request (thanks Eric Genet)
  * FEATURE: Added support for Vkontakte (thanks dotbg)
  * FEATURE: Added Sohu Weibo, Netease Weibo & Sina Weibo Apis (thanks Arthur Wang)
  * FEATURE: Added support for persistent Http Connections (thanks Craig Minton)

[1.2.2]
  * FIX: Added support for JDK 1.5. Issue #146 (thanks Sripathi Krishnan)
  * FIX: Invalid character constant error message. Issue #137 (thanks Scott Scoble)
  * FEATURE: Added a Api class to handle windows live authentication. Issue #135 (thanks Tomas Lin)
  * FEATURE: Added refresh token feature for Yahoo! API. Issue #134 (thanks Aaron Foltz)
  * FEATURE: Added support for Plurk API. Issue #130 (thanks Chia-Wei Li)
  * FIX: Request.setConnectTimeout() and setReadTimeout() throw NPE. Issue #123 (thanks thepizzle)

[1.2.3]
  * FEATURE: Added default Content-Type header
  * FEATURE: Sapo Api
  * FEATURE: Plurk Mobile Api
  * FEATURE: Kaixin and QWeibo Apis
  * FEATURE: SimpleGeo Api

[1.3.0]
  * FEATURE: Multiple parameters with the same name supported.
  * FEAUTRE: 'debug' mode that logs useful information about the signature making

[1.3.1]
  * FEATURE: Meetup.com Api
  * FEATURE: NetProspex Api