@@ -79,3 +79,4 @@
 [1.3.1]
   * FEATURE: Meetup.com Api
   * FEATURE: NetProspex Api
+  * FEATURE: Trello.com Api
